minimal-service/minimal-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minimal-service
  labels:
    app: minimal-service
spec:
  selector:
    matchLabels:
      app: minimal-service
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: minimal-service
    spec:
      containers:
        - name: minimal-service
          image: localhost:5000/minimal-service:v1.0.0
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      securityContext:
        runAsNonRoot: false
