minimal-service/minimal-service-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: minimal-service
spec:
  selector:
    app: minimal-service
  ports:
  - port: 9090
