minimal-service/minimal-service-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minimal-service-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: minimal-service
          servicePort: 9090
